# moos-ivp-extend

./: .gitignore  INSTRUCTOR_NOTES.md
docs/: DEPLOY_PABLO.md
docs/superpowers/plans/: 2026-06-22-adversarial-rescue-harness.md
docs/superpowers/specs/: 2026-06-22-adversarial-rescue-autoresearch-design.md
missions/lab_04/s2_alpha/: alpha.bhv  alpha.moos++
missions/lab_04/s3_alpha/: alpha.bhv  alpha.moos  alpha.moos++
missions/lab_04/s4_alpha/: alpha.bhv  alpha.moos  alpha.moos++
scout_eval/: README.md  gui_match.sh  gui_match_AB.sh  gui_match_rs2.sh  gui_match_scoutshadow.sh  gui_tile.sh  run_suite.sh  scout_results_beta.txt  scout_results_beta2.txt  scout_results_clean1.txt  scout_results_coord.txt  scout_results_cover_all.txt  scout_results_coveral.txt  scout_results_lawn.txt  scout_results_lawn2.txt  scout_results_lawn3.txt  scout_results_lawn4.txt  scout_results_test.txt  scout_results_test_w3.txt  scout_results_vori_check.txt  scout_results_voronoi.txt  scout_results_winreg.txt  suite_rescue.sh  suite_scoutshadow.sh  suite_tile.sh
scripts/pOdometry/: CMakeLists.txt  main.cpp
src/lib_behaviors-test/: BHV_Rescue.cpp  BHV_Rescue.h  CMakeLists.txt
src/lib_bhv_scout/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt  README
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenRescue/: GenRescue.cpp  GenRescue.h
src/pOdometry/: Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
(+47 files in other folders)
